[metadata]      
name = detector
version = 1.0.0
license =  
description = A deep learning model from scratch
long_description = file: README.md
author = Buddhika Abeysekera
author_email = babey.lk@gmail.com
classifiers=

[options]
packages = find:
package_dir = 
    =src
include_package_data = True
install_requires = 

[options.packages.find]
where=src